# hw

hw_1/artifacts/: test.txt  test1.2.2.txt  test1.2.txt
hw_2/2.1/: generate_tex.py
hw_2/2.2/: generate_tex.py
hw_2/2.2/artifacts/: PyPl
hw_3/: pyproject.toml
hw_3/3.1/: main.py  matrix.py
hw_3/3.2/: main.py  matrix.py
hw_3/3.2/artifacts/: log
hw_4/: pyproject.toml
hw_4/4.1/: 4.1.py  4.1_pr.py  4.1_th.py
hw_4/4.1/artifacts/: 4.1
hw_4/4.2/: 4.2_pr.py  4.2_th.py
hw_4/4.2/artifacts/: 4.2
hw_5/5.1/: 5.1.py
